--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapefont.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapefont.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ShapeFont:class'
     summary: |-
-      <span data-ttu-id="41651-101">代表形状的 TextRange 对象的字体属性，如字体名称、字体大小和颜色。</span><span class="sxs-lookup"><span data-stu-id="41651-101">Represents the font attributes, such as font name, font size, and color, for a shape's TextRange object.</span></span>
+      代表形状的 TextRange 对象的字体属性，如字体名称、字体大小和颜色。
 
-      <span data-ttu-id="41651-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeFont
     fullName: Excel.ShapeFont
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ShapeFont#bold:member'
@@ -29,9 +29,9 @@ items:
       - 'excel!Excel.ShapeFont#underline:member'
   - uid: 'excel!Excel.ShapeFont#bold:member'
     summary: |-
-      <span data-ttu-id="41651-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="41651-103">Represents the bold status of font.</span></span> <span data-ttu-id="41651-104">如果 TextRange 包含粗体和非粗体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="41651-104">Returns null the TextRange includes both bold and non-bold text fragments.</span></span>
+      表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
-      <span data-ttu-id="41651-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ShapeFont#color:member'
     summary: |-
-      <span data-ttu-id="41651-106">文本颜色的 HTML 颜色代码表示形式（例如，"\#FF0000" 代表红色）。</span><span class="sxs-lookup"><span data-stu-id="41651-106">The HTML color code representation of the text color (e.g. "\#FF0000" represents red).</span></span> <span data-ttu-id="41651-107">如果 TextRange 包含具有不同颜色的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="41651-107">Returns null if the TextRange includes text fragments with different colors.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如，"\#FF0000" 代表红色）。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
 
-      <span data-ttu-id="41651-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -58,7 +58,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ShapeFont#context:member'
-    summary: <span data-ttu-id="41651-109">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="41651-109">The request context associated with the object.</span></span> <span data-ttu-id="41651-110">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="41651-110">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -71,9 +71,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ShapeFont#italic:member'
     summary: |-
-      <span data-ttu-id="41651-111">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="41651-111">Represents the italic status of font.</span></span> <span data-ttu-id="41651-112">如果 TextRange 包含斜体和非斜体文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="41651-112">Returns null if the TextRange includes both italic and non-italic text fragments.</span></span>
+      表示字体的斜体状态。 如果 TextRange 包含斜体和非斜体文本片段，则返回 null。
 
-      <span data-ttu-id="41651-113">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -85,7 +85,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ShapeFont#load:member(1)'
-    summary: <span data-ttu-id="41651-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="41651-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="41651-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="41651-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -99,11 +99,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="41651-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="41651-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ShapeFontLoadOptions:interface'
   - uid: 'excel!Excel.ShapeFont#load:member(2)'
-    summary: <span data-ttu-id="41651-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="41651-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="41651-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="41651-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -117,11 +117,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="41651-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="41651-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ShapeFont#load:member(3)'
-    summary: <span data-ttu-id="41651-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="41651-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="41651-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="41651-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -139,7 +139,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="41651-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="41651-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -148,9 +148,9 @@ items:
                       }
   - uid: 'excel!Excel.ShapeFont#name:member'
     summary: |-
-      <span data-ttu-id="41651-123">表示字体名称（例如“Calibri”）。</span><span class="sxs-lookup"><span data-stu-id="41651-123">Represents font name (e.g. "Calibri").</span></span> <span data-ttu-id="41651-124">如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。</span><span class="sxs-lookup"><span data-stu-id="41651-124">If the text is Complex Script or East Asian language, this is the corresponding font name; otherwise it is the Latin font name.</span></span>
+      表示字体名称（例如，"Calibri"）。 如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。
 
-      <span data-ttu-id="41651-125">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-125">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -162,9 +162,9 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ShapeFont#set:member(1)'
-    summary: '<span data-ttu-id="41651-126">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="41651-126">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="41651-127">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="41651-127">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="41651-128">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="41651-128">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ShapeFont): void`
     name: 'set(properties, options)'
@@ -180,15 +180,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="41651-129">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="41651-129">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ShapeFontUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="41651-130">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="41651-130">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ShapeFont#set:member(2)'
-    summary: '<span data-ttu-id="41651-131">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="41651-131">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -207,9 +207,9 @@ items:
             - 'excel!Excel.ShapeFont:class'
   - uid: 'excel!Excel.ShapeFont#size:member'
     summary: |-
-      <span data-ttu-id="41651-132">表示以磅为单位的字体大小（例如 11）。</span><span class="sxs-lookup"><span data-stu-id="41651-132">Represents font size in points (e.g. 11).</span></span> <span data-ttu-id="41651-133">如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="41651-133">Returns null if the TextRange includes text fragments with different font sizes.</span></span>
+      表示以磅为单位的字体大小（例如，11）。 如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。
 
-      <span data-ttu-id="41651-134">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-134">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -221,7 +221,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.ShapeFont#toJSON:member(1)'
-    summary: '<span data-ttu-id="41651-135">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="41651-135">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="41651-136">.</span><span class="sxs-lookup"><span data-stu-id="41651-136"></span></span> <span data-ttu-id="41651-137">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="41651-137"></span></span><!-- --><span data-ttu-id="41651-138">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeFont 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeFontData`</span><span class="sxs-lookup"><span data-stu-id="41651-138">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ShapeFont object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ShapeFontData`</span></span><!-- --><span data-ttu-id="41651-139">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="41651-139">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ShapeFont 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeFontData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -235,9 +235,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ShapeFont#underline:member'
     summary: |-
-      <span data-ttu-id="41651-140">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="41651-140">Type of underline applied to the font.</span></span> <span data-ttu-id="41651-141">如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="41651-141">Returns null if the TextRange includes text fragments with different underline styles.</span></span> <span data-ttu-id="41651-142">有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="41651-142">See Excel.ShapeFontUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
 
-      <span data-ttu-id="41651-143">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41651-143">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
@@ -249,7 +249,7 @@ items:
         type:
           - 'excel!Excel.ShapeFont#underline~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -259,7 +259,7 @@ references:
     name: Excel.Interfaces.ShapeFontLoadOptions
   - uid: 'excel!Excel.Interfaces.ShapeFontUpdateData:interface'
     name: Interfaces.ShapeFontUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ShapeFontData:interface'
     name: Excel.Interfaces.ShapeFontData
