--- a/docs/docs-ref-autogen/office/office/office.context.yml
+++ b/docs/docs-ref-autogen/office/office/office.context.yml
@@ -59,7 +59,7 @@ items:
   - uid: 'office!Office.Context#contentLanguage:member'
     summary: 获取用户指定的区域设置（语言）以编辑文档或项目。
     remarks: |-
-      值反映在 Office 主机应用程序中使用**文件&gt;选项&gt;语言**指定的**编辑语言**设置。 `contentLanguage`
+      `contentLanguage`值反映在 Office 主机应用程序中使用**文件 &gt; 选项 &gt; 语言**指定的**编辑语言**设置。
 
       **支持详细信息**
 
@@ -115,7 +115,7 @@ items:
     remarks: |-
       返回的值是 RFC 1766 语言标记格式的字符串，如 en-us。
 
-      此`displayLanguage`值反映了在 Office 主机应用程序中**使用&gt;文件&gt;选项语言**指定的当前**显示语言**设置。
+      此 `displayLanguage` 值反映了在 Office 主机应用程序中使用**文件 &gt; 选项 &gt; 语言**指定的当前**显示语言**设置。
 
       在 Outlook 中使用时，适用的模式为 "撰写" 或 "已读"。
 
@@ -125,7 +125,7 @@ items:
 
       有关 Office 主机应用程序和服务器要求的详细信息，请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
-      *支持的主机（按平台）* <table> <tr><th> </th><th> Windows 版 Office </th><th> Web 浏览器中的 Office </th><th> iPad 版 Office </th><th> 移动设备上的 Outlook </th><th> Mac 版 Office </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> </td><td> Y </td><td> </td><td> </td></tr> </table>
+      *支持的主机（按平台）* <table> <tr><th> </th><th> Windows 版 Office </th><th> Web 浏览器中的 Office </th><th> iPad 版 Office </th><th> 移动设备上的 Outlook </th><th> Mac 版 Office </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> Y </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> </td><td> Y </td><td> </td><td> Y </td></tr> </table>
 
       #### <a name="examples"></a>示例
 
@@ -214,9 +214,9 @@ items:
   - uid: 'office!Office.Context#mailbox:member'
     summary: 提供对 Microsoft Outlook 加载项对象模型的访问权限。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`Restricted`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`Restricted`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
       **主要属性**：
 
@@ -299,11 +299,11 @@ items:
     summary: |-
       获取一个对象，它表示保存到用户邮箱的邮件外接程序的自定义设置或状态。
 
-      该`RoamingSettings`对象使您可以存储和访问存储在用户邮箱中的邮件外接程序的数据，以便从用于访问该邮箱的任何主机客户端应用程序运行时，该加载项都可使用该加载项。
+      该 `RoamingSettings` 对象使您可以存储和访问存储在用户邮箱中的邮件外接程序的数据，以便从用于访问该邮箱的任何主机客户端应用程序运行时，该加载项都可使用该加载项。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`Restricted`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`Restricted`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写或阅读
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
     name: roamingSettings
     fullName: roamingSettings
     langs:
