--- a/docs/docs-ref-autogen/outlook_1_1/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/outlook/office.messagecompose.yml
@@ -43,13 +43,13 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个`Authorization: Bearer`错误，该错误会错误地将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用由`addFileAttachmentFromBase64`要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       **错误**：
 
@@ -132,7 +132,7 @@ items:
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~0:complex'
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果上传附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addFileAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#addFileAttachmentAsync:member(2)'
@@ -143,13 +143,13 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个`Authorization: Bearer`错误，该错误会错误地将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用由`addFileAttachmentFromBase64`要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       **错误**：
 
@@ -194,9 +194,9 @@ items:
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       **错误**：
 
@@ -259,7 +259,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addItemAttachmentAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#addItemAttachmentAsync:member(2)'
@@ -274,9 +274,9 @@ items:
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       **错误**：
 
@@ -302,14 +302,14 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果成功，附件标识符将在 `asyncResult.value` 属性中提供。 如果添加附件失败，`asyncResult` 对象将包含一个提供错误说明的 `Error` 对象。
           type:
             - 'outlook!Office.MessageCompose#addItemAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#bcc:member'
     summary: |-
       获取对象，该对象提供用于获取或更新邮件的密件抄送 (Bcc) 行上的收件人的方法。
 
-      默认情况下，集合上限为 100 个成员。 但是，在 Windows 和 Mac 上，以下限制适用。
+      默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
 
       - 最多包含 500 个成员。
 
@@ -317,9 +317,9 @@ items:
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -376,9 +376,9 @@ items:
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -412,15 +412,15 @@ items:
     summary: |-
       提供对邮件的抄送 (Cc) 收件人的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
-      该`cc`属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 "抄送" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Windows 和 Mac 上，以下限制适用。
+      该 `cc` 属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 **"抄送**" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
 
       - 最多包含 500 个成员。
 
       - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -479,9 +479,9 @@ items:
 
       对于撰写窗体的新项目，此属性获得一个 null 值。如果用户设置一个主题并保存该项目，`conversationId` 属性将返回一个值。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -503,11 +503,11 @@ items:
     summary: |-
       获取实例表示的项的类型。
 
-      该`itemType`属性返回一个`ItemType`枚举值，指示 item 对象实例是邮件还是约会。
+      该 `itemType` 属性返回一个 `ItemType` 枚举值，指示 item 对象实例是邮件还是约会。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -531,11 +531,11 @@ items:
 
       自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 `CustomProperties` 对象，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
 
-      自定义属性作为 asyncResult 属性中`CustomProperties`的对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
+      自定义属性作为 `CustomProperties` asyncResult 属性中的对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -599,7 +599,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.MessageCompose#loadCustomPropertiesAsync~0:complex'
         - id: userContext
@@ -614,9 +614,9 @@ items:
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       **错误**：
 
@@ -671,7 +671,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
           type:
             - 'outlook!Office.MessageCompose#removeAttachmentAsync~0:complex'
   - uid: 'outlook!Office.MessageCompose#removeAttachmentAsync:member(2)'
@@ -682,9 +682,9 @@ items:
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadWriteItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       **错误**：
 
@@ -706,7 +706,7 @@ items:
           type:
             - string
         - id: callback
-          description: 可选。 方法完成后，使用单个参数类型调用在`callback`参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->. 如果删除附件失败，`asyncResult.error` 属性将包含一个说明失败原因的错误代码。
           type:
             - 'outlook!Office.MessageCompose#removeAttachmentAsync~1:complex'
   - uid: 'outlook!Office.MessageCompose#subject:member'
@@ -717,9 +717,9 @@ items:
 
       `subject` 属性返回一个 `Subject` 对象，该对象提供用于获取和设置主题的方法。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
@@ -758,15 +758,15 @@ items:
     summary: |-
       提供对邮件的“收件人”行上的收件人的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
-      `to` 属性返回一个 `Recipients` 对象，该对象提供用于获取或更新邮件的“收件人”行上收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Windows 和 Mac 上，以下限制适用。
+      该 `to` 属性返回一个[收件人](xref:outlook!Office.Recipients:interface)对象，该对象提供用于获取或更新邮件的 "**收件人**" 行上的收件人的方法。 默认情况下，集合上限为 100 个成员。 但是，在 Outlook 网页版、Windows 版和 Mac 版中，以下限制适用。
 
       - 最多包含 500 个成员。
 
       - 为每个呼叫最多设置 100 个成员，总共多达 500 个成员。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件撰写
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
 
       #### <a name="examples"></a>示例
 
